@@ -4,7 +4,6 @@ import lombok.Setter;
 import models.entities.criterio.Criterio;
 import models.entities.criterio.Filtro;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -12,56 +11,49 @@ public class Coleccion {
     private String titulo;
     private String descripcion;
     @Setter
-    private Criterio criterio; // TODO FIX Métodos
-    private List<Hecho> hechos;
+    private Fuente fuente;
+    @Setter
+    private Criterio criterio;
 
     public Coleccion(String titulo, String descripcion) {
         this.titulo = titulo;
         this.descripcion = descripcion;
-        this.hechos = new ArrayList<>();
     }
-
-    public Boolean eliminarHecho(Hecho hecho) {
-        if (this.hechos.remove(hecho)) {
-            return true;
-        }
-        return false;
-    }
-
-    public Boolean agregarHecho(Hecho hecho) {
-        if (this.cumpleCriterio(hecho)
-                && !hecho.getEliminado()) {
-            this.hechos.add(hecho);
-            return true;
-        }
-        return false;
-    }
-
+    // Consultas de Hechos
     public List<Hecho> consultarHechos() {
-        this.recalcularHechos();
-        return this.hechos;
+        List<Hecho> hechos = fuente.importarHechos();
+        hechos = this.filtrarHechosSegunCriterio(hechos);
+        return hechos;
     }
 
     public List<Hecho> consultarHechos(List<Filtro> filtros) {
-        this.recalcularHechos();
-        List<Hecho> hechosQueCumplen = this.hechos
-                .stream()
-                .filter(hecho -> filtros.stream().allMatch(filtro -> filtro.coincide(hecho)))
-                .collect(Collectors.toList());
-        return hechosQueCumplen;
+        List<Hecho> hechos = this.consultarHechos();
+        List<Hecho> hechosQueCumplenFiltrosUsuario = this.aplicarFiltros(hechos, filtros);
+
+        return hechosQueCumplenFiltrosUsuario;
     }
 
-    private Boolean cumpleCriterio(Hecho hecho){
-    if(this.criterio == null){
+    // Auxiliares a consultas de Hechos
+    private List<Hecho> filtrarHechosSegunCriterio(List<Hecho> hechos) {
+        List<Hecho> hechosFiltrado = hechos.stream().filter( hecho ->
+            this.cumpleCriterioColeccion(hecho) && !hecho.getEstaEliminado()
+        ).toList();
+
+        return hechosFiltrado;
+    }
+
+    private Boolean cumpleCriterioColeccion(Hecho hecho){
+    if(this.criterio == null){ //Si no tengo criterio, lo cumple
         return true;
     }
         return this.criterio.cumpleCriterio(hecho);
     }
 
-    private void recalcularHechos() {
-        if (!this.hechos.isEmpty()) {
-            this.hechos = this.hechos.stream().filter(hecho -> this.cumpleCriterio(hecho)).toList();
-//            this.hechos.removeIf(hecho -> !this.cumpleCriterio(hecho));
-        }
+    private List<Hecho> aplicarFiltros(List<Hecho> hechos, List<Filtro> filtros) {
+        List<Hecho> hechosQueCumplenFiltros = hechos
+                .stream()
+                .filter(hecho -> filtros.stream().allMatch(filtro -> filtro.coincide(hecho)))
+                .collect(Collectors.toList());
+        return hechosQueCumplenFiltros;
     }
 }
